Go to JSF-part1

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="3.1">
     <servlet>
         <servlet-name>CreateContactServlet</servlet-name>
-        <servlet-class>com.addressbook.model.servlets.CreateContactServlet</servlet-class>
+        <servlet-class>com.addressbook.servlets.CreateContactServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CreateContactServlet</servlet-name>
@@ -14,7 +14,7 @@
 
     <servlet>
         <servlet-name>ListAllContactsServlet</servlet-name>
-        <servlet-class>com.addressbook.model.servlets.ListAllContactsServlet</servlet-class>
+        <servlet-class>com.addressbook.servlets.ListAllContactsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ListAllContactsServlet</servlet-name>
@@ -22,7 +22,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>DeleteContactServlet</servlet-name>
-        <servlet-class>com.addressbook.model.servlets.DeleteContactServlet</servlet-class>
+        <servlet-class>com.addressbook.servlets.DeleteContactServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>DeleteContactServlet</servlet-name>
@@ -30,10 +30,19 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>UpdateContactServlet</servlet-name>
-        <servlet-class>com.addressbook.model.servlets.UpdateContactServlet</servlet-class>
+        <servlet-class>com.addressbook.servlets.UpdateContactServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UpdateContactServlet</servlet-name>
         <url-pattern>/update</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Faces Servlet</servlet-name>
+        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 </web-app>
