JDBC+UPDATE(able to get only one contact-->to do: list)

--- a/web/resources/sql/queries.properties
+++ b/web/resources/sql/queries.properties
@@ -3,7 +3,8 @@ createPhoneNumber=insert into ADDRESSBOOK_PHONENUMBERS VALUES(?, ?)
 
 updateContact=UPDATE ADDRESSBOOK_CONTACTS SET AC_FIRST_NAME=?,AC_LAST_NAME=?,AC_COMPANY=?,AC_CONTENT_TYPE=?,AC_PHOTO=? WHERE AC_CONTACT_ID=?
 updatePhoneNumbers=UPDATE ADDRESSBOOK_PHONENUMBER SET AP_NUMBER=? WHERE AP_CONTACT_ID=?
-get=
+getContact={call GET_ALL_CONTACT_DATA(?,?,?,?,?,?,?)}
+getContactId=SELECT AC_CONTACT_ID FROM ADDRESSBOOK_CONTACTS
 delete=
 getAll=
 nextVal=select CONTACTS_SEQUENCE.NEXTVAL from dual
